# Lem_in

./: CMakeLists.txt  Makefile  README.md  add_to_mas_res.c  add_vert.c  ants_go.c  bubble_sort_list.c  check_flags.c  count_amount_rooms.c  count_iterations.c  del_functions.c  del_mas_ways.c  del_verticle.c  dijkstra.c  dijkstraa.c  find_list_ways.c  ft_error_mode.c  get_mas_ways.c  get_min_vert.c  get_short_way.c  graph_list_for_all_vert.c  graph_normalize.c  help.c  is_ident_way.c  list_lens.c  main.c  parsing.c  print_list.c  print_result.c  psevdo_ants_go.c  quick_sort.c  quick_sort_for_intmas.c  sort_list.c  start_link_end.c  swap_2lnk_item.c  t_mas_ways.c  way_operations.c  wish_list_operations.c
BFS/: bfs.c  queue_operation.c
algorithms/: algorithms.c  change_start.c  get_min_result.c
includes/: bfs.h  flags.h  lem_algos.h  lem_in.h  parsing.h  print.h  test.h  tree.h
libft/: CMakeLists.txt
maps_and_generator/: big  big-superposition.uu  big-superposition2.uu  big-superposition3.uu  big-superposition4.uu  big.txt  bigo.txt  super84  superpos  superpos.txt  test  test.txt  test_1  test_2  test_3  test_4  test_5
meeting trees/: connect_all_available.c  count_pow_in_top.c  count_ways.c  create_node_list.c  create_pointer_list.c  create_top_nodes.c  del_half_nodes.c  del_node.c  del_p_list.c  del_top_node.c  find_node.c  lema.c  meet_tree_algo.c  pretendent.c  print_functions.c
parsing/: add_to_map.c  check_sharp.c  count_chars.c  ft_error.c  get_target.c  is_forbidden_chars.c  link_validation.c  parsing.c  room_validation.c  str_only_digits.c
srcs/: add_to_mas_res.c  add_vert.c  ants_go.c  bubble_sort_list.c  check_flags.c  count_amount_rooms.c  count_iterations.c  del_mas_ways.c  find_list_ways.c  ft_error_mode.c  get_short_way.c  graph_list_for_all_vert.c  help.c  is_ident_way.c  main.c  print_list.c  print_result.c  psevdo_ants_go.c  way_operations.c  wish_list_operations.c
srcs/BFS/: bfs.c  queue_operation.c
srcs/algorithms/: algorithms.c  change_start.c  get_min_result.c
srcs/parsing/: add_to_map.c  check_sharp.c  count_chars.c  get_target.c  is_forbidden_chars.c  link_validation.c  parsing.c  room_validation.c  str_only_digits.c
vis/: vis.c
